--- a/index.html
+++ b/index.html
@@ -1325,35 +1325,7 @@ aenc.plg       bg_default0.jpg  detect_gate.reg  hiscore.dat       keytest.mp3  
 <h1>Questions?</h1>
 <footer>All Hands Active Workshop</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="79" data-marpit-scope-8BSeFjDA="" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="79" data-marpit-pagination-total="81" style="--class:invert;--paginate:true;--footer:All Hands Active Workshop;">
-<h1>Binary Image Structure</h1>
-
-<table>
-<thead>
-<tr>
-<th>Start Address</th>
-<th>Component</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>0</td>
-<td><code>BOOT0</code></td>
-</tr>
-<tr>
-<td>0x6000</td>
-<td><code>BOOT1</code></td>
-</tr>
-<tr>
-<td>0x24400</td>
-<td>MINFS Filesystem</td>
-</tr>
-<tr>
-<td>0x7F000</td>
-<td>FAT16 Image</td>
-</tr>
-</tbody>
-</table>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="79" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="80" data-marpit-pagination-total="81" style="--class:invert;--paginate:true;--footer:All Hands Active Workshop;">
 <footer>All Hands Active Workshop</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="80" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="80" data-marpit-pagination-total="81" style="--class:invert;--paginate:true;--footer:All Hands Active Workshop;">
