--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="2" data-marpit-pagination-total="81" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
 <h1>Table of Contents</h1>
 <ul>
-<li>Aim</li>
+<li>Bullets</li>
 <li>Method</li>
 <li>Madness</li>
 <li>Fin</li>
@@ -25,7 +25,13 @@
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="3" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
-<h1>Aim</h1>
+<h1>Bullets</h1>
+  <ul>
+    <li>Aim</li>
+    <li>Method</li>
+    <li>Madness</li>
+    <li>Fin</li>
+  </ul>
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
