--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Table of Contents</h1>
 <ul>
 <li>Bullets</li>
-<li>Method</li>
+<li>Tables</li>
 <li>Madness</li>
 <li>Fin</li>
 </ul>
@@ -35,7 +35,26 @@
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
-<h1>Method</h1>
+<h1>Tables</h1>
+  <table>
+    <tr>
+    <th>Fruits</th><th>Price</th>
+    </tr>
+    <tr>
+      <td>Apples</td><td>$1</td>
+    </tr>
+    <tr>
+      <td>Oranges</td><td>$2</td>
+    </tr>
+    <tr>
+      <td>Bananas</td><td>$3</td>
+    </tr>
+    <tr>
+      <td>Tofu</td><td>$4</td>
+    </tr>
+    <tr>
+    </tr>
+  </table>
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="5" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
