--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <ul>
 <li>Bullets</li>
 <li>Tables</li>
-<li>Madness</li>
+<li>Code</li>
 <li>Fin</li>
 </ul>
 <footer>redblamer.github.io</footer>
@@ -58,7 +58,10 @@
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="5" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
-<h1>Madness</h1>
+<h1>Code</h1>
+  Last 15 minutes
+  <code>| tstats count where index=* sourcetype=* by index sourcetype source host</code>
+  (You will only have access to <b>metadata</b>. That means the indexed fields and not the search-time fields.)
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="6" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
