--- a/index.html
+++ b/index.html
@@ -16,44 +16,44 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="2" data-marpit-pagination-total="81" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
 <h1>Table of Contents</h1>
-<ul>
-<li>Bullets</li>
-<li>Tables</li>
-<li>Code</li>
-<li>Fin</li>
-</ul>
+  <ul>
+  <li>Bullets</li>
+  <li>Tables</li>
+  <li>Code</li>
+  <li>End credits</li>
+  </ul>
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="3" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
 <h1>Bullets</h1>
   <ul>
-    <li>Aim</li>
-    <li>Method</li>
-    <li>Madness</li>
-    <li>Fin</li>
+  <li>Aim</li>
+  <li>Method</li>
+  <li>Madness</li>
+  <li>Fin</li>
   </ul>
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
 <h1>Tables</h1>
   <table>
-    <tr>
-    <th>Fruits</th><th>Price</th>
-    </tr>
-    <tr>
-      <td>Apples</td><td>$1</td>
-    </tr>
-    <tr>
-      <td>Oranges</td><td>$2</td>
-    </tr>
-    <tr>
-      <td>Bananas</td><td>$3</td>
-    </tr>
-    <tr>
-      <td>Tofu</td><td>$4</td>
-    </tr>
-    <tr>
-    </tr>
+  <tr>
+  <th>Fruits</th><th>Price</th><th>Country of origin</th><th>Color</th><th>Basic shape</th><th>Comments/Notes</th>
+  </tr>
+  <tr>
+  <td>Apples</td><td>$1</td><td>Japan</td><td>Red/Green</td><td>Round</td><td>You can eat the core.</td>
+  </tr>
+  <tr>
+  <td>Oranges</td><td>$2</td><td>China</td><td>Orange</td><td>Round</td><td>Do not eat the skin.</td>
+  </tr>
+  <tr>
+  <td>Bananas</td><td>$3</td><td>Brazil</td><td>Yellow</td><td>Sausage</td><td>Open from the bottom.</td>
+  </tr>
+  <tr>
+  <td>Tofu</td><td>$400</td><td>Uranus</td><td></td>Off-white<td>Spongebob</td><td>Not much flavor tbh.</td>
+  </tr>
+  <tr>
+  </tr>
   </table>
 <footer>redblamer.github.io</footer>
 </section>
@@ -61,11 +61,14 @@
 <h1>Code</h1>
   Last 15 minutes
   <code>| tstats count where index=* sourcetype=* by index sourcetype source host</code>
-  (You will only have access to <b>metadata</b>. That means the indexed fields and not the search-time fields.)
+  <p>You will only have access to <b>metadata</b>. (That means the indexed fields and not the search-time fields.)</p>
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="6" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
-<h1>Fin</h1>
+<h1>End credits</h1>
+<h2>End credits</h2>
+<h3>End credits</h3>
+<h4>End credits</h4>
 <footer>redblamer.github.io</footer>
 </section>
 <script>!function(){"use strict";const t="marpitSVGPolyfill:setZoomFactor,",e=Symbol();let r,o;function n(n){const i="object"==typeof n&&n.target||document,a="object"==typeof n?n.zoom:n;window[e]||(Object.defineProperty(window,e,{configurable:!0,value:!0}),window.addEventListener("message",(({data:e,origin:r})=>{if(r===window.origin)try{if(e&&"string"==typeof e&&e.startsWith(t)){const[,t]=e.split(","),r=Number.parseFloat(t);Number.isNaN(r)||(o=r)}}catch(t){console.error(t)}})));let l=!1;Array.from(i.querySelectorAll("svg[data-marpit-svg]"),(t=>{var e,n,i,s;t.style.transform||(t.style.transform="translateZ(0)");const c=a||o||t.currentScale||1;r!==c&&(r=c,l=c);const d=t.getBoundingClientRect(),{length:u}=t.children;for(let r=0;r<u;r+=1){const o=t.children[r],a=o.getScreenCTM();if(a){const t=null!==(n=null===(e=o.x)||void 0===e?void 0:e.baseVal.value)&&void 0!==n?n:0,r=null!==(s=null===(i=o.y)||void 0===i?void 0:i.baseVal.value)&&void 0!==s?s:0,l=o.firstElementChild,{style:u}=l;u.transformOrigin||(u.transformOrigin=`${-t}px ${-r}px`),u.transform=`scale(${c}) matrix(${a.a}, ${a.b}, ${a.c}, ${a.d}, ${a.e-d.left}, ${a.f-d.top}) translateZ(0.0001px)`}}})),!1!==l&&Array.from(i.querySelectorAll("iframe"),(({contentWindow:e})=>{null==e||e.postMessage(`${t}${l}`,"null"===window.origin?"*":window.origin)}))}r=1,o=void 0;const i=(t,e,r)=>{if(t.getAttribute(e)!==r)return t.setAttribute(e,r),!0};function a({once:t=!1,target:e=document}={}){const r="Apple Computer, Inc."===navigator.vendor?[n]:[];let o=!t;const a=()=>{for(const t of r)t({target:e});!function(t=document){Array.from(t.querySelectorAll('svg[data-marp-fitting="svg"]'),(t=>{var e;const r=t.firstChild,o=r.firstChild,{scrollWidth:n,scrollHeight:a}=o;let l,s=1;if(t.hasAttribute("data-marp-fitting-code")&&(l=null===(e=t.parentElement)||void 0===e?void 0:e.parentElement),t.hasAttribute("data-marp-fitting-math")&&(l=t.parentElement),l){const t=getComputedStyle(l),e=Math.ceil(l.clientWidth-parseFloat(t.paddingLeft||"0")-parseFloat(t.paddingRight||"0"));e&&(s=e)}const c=Math.max(n,s),d=Math.max(a,1),u=`0 0 ${c} ${d}`;i(r,"width",`${c}`),i(r,"height",`${d}`),i(t,"preserveAspectRatio",getComputedStyle(t).getPropertyValue("--preserve-aspect-ratio")||"xMinYMin meet"),i(t,"viewBox",u)&&t.classList.toggle("__reflow__")}))}(e),o&&window.requestAnimationFrame(a)};return a(),()=>{o=!1}}const l=Symbol(),s=document.currentScript;((t=document)=>{if("undefined"==typeof window)throw new Error("Marp Core's browser script is valid only in browser context.");if(t[l])return t[l];const e=a({target:t}),r=()=>{e(),delete t[l]};Object.defineProperty(t,l,{configurable:!0,value:r})})(s?s.getRootNode():document)}();
