--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="3" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
 <h1>Image</h1>
-<img src="data-input-from-multiple-sources.png" alt="My test image">
+<img width="100%" height="100%" src="data-input-from-multiple-sources.png" alt="My test image">
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
