--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
 <h1>Table</h1>
   <table>
+    <tr>
+      <td>Table 1</td>
+    </tr>
+    <tr>
+      <td>https://foo</td>
+    </tr>
+  </table>
+  <table>
+    <tr>
+      <td>Table 2</td>
+    </tr>
+    <tr>
+      <td><a href="https://bar">https://bar</a></td>
+    </tr>
+  </table>
+  <!--table>
   <tr>
   <th>Fruits</th><th>Price</th><th>Country of origin</th><th>Color</th><th>Basic shape</th><th>Comments/Notes</th>
   </tr>
@@ -49,7 +65,7 @@
   </tr>
   <tr>
   </tr>
-  </table>
+  </table -->
 <footer>redblamer.github.io</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="5" data-marpit-pagination-total="6" style="--class:invert;--paginate:true;--footer:redblamer.github.io;">
